--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
                 "type": "node",
                 "request": "launch",
                 "name": "Launch Program",
-                "program": "${workspaceRoot}\\qiniu.js"
+                "program": "${workspaceRoot}\\refresh.js"
             }
         ]
     }
