--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-exec": "^2.1.3",
+    "gulp-shell": "^0.6.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
