--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "superagent": "^3.6.0",
     "vue": "^2.4.2",
     "vue-awesome-swiper": "^2.6.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-server-renderer": "^2.5.2",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
