--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-awesome-swiper": "^2.6.2",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.5.2",
-    "vuex": "^3.0.0"
+    "vuex": "^3.0.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
